r590:    * dh_install: recalculate automatic $dest eash time through the glob loop.      It might change if there are multiple wildcards Closes: #196344

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.47) unstable; urgency=low
+
+  * dh_install: recalculate automatic $dest eash time through the glob loop.
+    It might change if there are multiple wildcards Closes: #196344
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 16 Jun 2003 13:35:27 -0400
+
 debhelper (4.1.46) unstable; urgency=low
 
   * Added dh_scrollkeeper, by Ross Burton.
