r591:    * dh_python typo fix Closes: #197679    * dh_link: don't complain if tmp dir does not exist yet when doing pre-link      scan.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.48) unstable; urgency=low
+
+  * dh_python typo fix Closes: #197679
+  * dh_link: don't complain if tmp dir does not exist yet when doing pre-link
+    scan.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 19 Jun 2003 19:51:13 -0400
+
 debhelper (4.1.47) unstable; urgency=low
 
   * dh_install: recalculate automatic $dest eash time through the glob loop.
