r592:    * dh_installman: Don't require trailing whitespace after the seciton number      in the TH line.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.49) unstable; urgency=low
+
+  * dh_installman: Don't require trailing whitespace after the seciton number
+    in the TH line.
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Jul 2003 14:08:41 -0400
+
 debhelper (4.1.48) unstable; urgency=low
 
   * dh_python typo fix Closes: #197679
