r593:    * dh_clean: make -X work for debian/substvars file.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.50) unstable; urgency=low
+
+  * dh_clean: make -X work for debian/substvars file.
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  3 Jul 2003 22:05:32 -0400
+
 debhelper (4.1.49) unstable; urgency=low
 
   * dh_installman: Don't require trailing whitespace after the seciton number
