--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.51) unstable; urgency=low
+
+  * dh_installchangelogs: Install debian/NEWS as NEWS.Debian, even for native
+    packages. This doesn't follow the lead of the changelog for native
+    packages for the reasons discussed in bug #192089
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  4 Jul 2003 00:34:24 -0400
+
 debhelper (4.1.50) unstable; urgency=low
 
   * dh_clean: make -X work for debian/substvars file.
