--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.1.52) unstable; urgency=low
+
+  * dh_clean: Clean the *.debhelper temp files on a per-package basis, in
+    case dh_clean is run on one package at a time.
+  * Removed the debian/substvars removal code entirely. It was only there to
+    deal with half-built trees built with debhelper << 3.0.30
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  6 Jul 2003 20:28:27 -0400
+
 debhelper (4.1.51) unstable; urgency=low
 
   * dh_installchangelogs: Install debian/NEWS as NEWS.Debian, even for native
