r596:    * dh_scrollkeeper: fixed some overenthusiastic quoting. Closes: #201810

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.53) unstable; urgency=low
+
+  * dh_scrollkeeper: fixed some overenthusiastic quoting. Closes: #201810
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 Jul 2003 09:45:23 +0200
+
 debhelper (4.1.52) unstable; urgency=low
 
   * dh_clean: Clean the *.debhelper temp files on a per-package basis, in
