--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.54) unstable; urgency=low
+
+  * dh_scrollkeeper: fix postrm to not run if scrollkeeper is not present
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 19 Jul 2003 16:57:30 +0200
+
 debhelper (4.1.53) unstable; urgency=low
 
   * dh_scrollkeeper: fixed some overenthusiastic quoting. Closes: #201810
