--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.55) unstable; urgency=low
+
+  * dh_strip: do not strip files multiple times.
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 22 Jul 2003 17:04:49 -0400
+
 debhelper (4.1.54) unstable; urgency=low
 
   * dh_scrollkeeper: fix postrm to not run if scrollkeeper is not present
