r1086:    * Several man pae typo fixes by Ruben Porras. Closes: #202819    * Now in a subversion repository, some minor changes for that.    * dh_link test should expect results in debian/debhelper, not debian/tmp.

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -38,6 +38,10 @@ pages for additional documentation.
 
 =back
 
+If a program's name starts with "dh_", and the program is not on the above
+list, then it is not part of the debhelper package, but it should still
+work like the other programs described on this page.
+
 =head1 DEBHELPER CONFIG FILES
 
 Many debhelper commands make use of files in F<debian/> to control what they
