--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.56) unstable; urgency=low
+
+  * Several man pae typo fixes by Ruben Porras. Closes: #202819
+  * Now in a subversion repository, some minor changes for that.
+  * dh_link test should expect results in debian/debhelper, not debian/tmp.
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 Jul 2003 15:36:45 -0400
+
 debhelper (4.1.55) unstable; urgency=low
 
   * dh_strip: do not strip files multiple times.
