r1088:    * dh_install: Add LIMITATIONS section and other changes to clarify      renaming. Closes: #203548

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.57) unstable; urgency=low
+
+  * dh_install: Add LIMITATIONS section and other changes to clarify
+    renaming. Closes: #203548
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 31 Jul 2003 13:51:01 -0400
+
 debhelper (4.1.56) unstable; urgency=low
 
   * Several man pae typo fixes by Ruben Porras. Closes: #202819
