r1576:    * Typo, Closes: #203907    * dh_python: clan compiled files on downgrade, upgrade, not only      removal. Closes: #204286

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.58) unstable; urgency=low
+
+  * Typo, Closes: #203907
+  * dh_python: clan compiled files on downgrade, upgrade, not only
+    removal. Closes: #204286
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  7 Aug 2003 15:47:06 -0400
+
 debhelper (4.1.57) unstable; urgency=low
 
   * dh_install: Add LIMITATIONS section and other changes to clarify
