r1578:    * dh_installman: support .TH lines with quotes. Closes: #204527

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.59) unstable; urgency=low
+
+  * dh_installman: support .TH lines with quotes. Closes: #204527
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  7 Aug 2003 20:39:36 -0400
+
 debhelper (4.1.58) unstable; urgency=low
 
   * Typo, Closes: #203907
