r1580:    * dh_python: support python ver 2.3. Closes: #204556

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.60) unstable; urgency=low
+
+  * dh_python: support python ver 2.3. Closes: #204556
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  8 Aug 2003 11:59:34 -0400
+
 debhelper (4.1.59) unstable; urgency=low
 
   * dh_installman: support .TH lines with quotes. Closes: #204527
