r1582:    * dh_makeshlibs: only scan files matching *.so.* and *.so, not *.so*.      Closes: #204559

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.61) unstable; urgency=low
+
+  * dh_makeshlibs: only scan files matching *.so.* and *.so, not *.so*.
+    Closes: #204559
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  8 Aug 2003 17:08:00 -0400
+
 debhelper (4.1.60) unstable; urgency=low
 
   * dh_python: support python ver 2.3. Closes: #204556
