r1584:    * Fix a bug in quoted section parsing that put the quotes in the parsed      out section number. Closes: #204731

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.62) unstable; urgency=low
+
+  * Fix a bug in quoted section parsing that put the quotes in the parsed
+    out section number. Closes: #204731
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  9 Aug 2003 22:25:23 -0400
+
 debhelper (4.1.61) unstable; urgency=low
 
   * dh_makeshlibs: only scan files matching *.so.* and *.so, not *.so*.
