r1586:    * dh_python: patch from Josselin to fix generated depends. Closes: #204717    * dh_pythn: also stylistic and tab damage fixes

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.63) unstable; urgency=low
+
+  * dh_python: patch from Josselin to fix generated depends. Closes: #204717
+  * dh_pythn: also stylistic and tab damage fixes
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 11 Aug 2003 15:33:16 -0400
+
 debhelper (4.1.62) unstable; urgency=low
 
   * Fix a bug in quoted section parsing that put the quotes in the parsed
