r1588:    * dh_python: Add a -V flag to choose the python version modules in a package      use. Patch from Josselin, of course.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.64) unstable; urgency=low
+
+  * dh_python: Add a -V flag to choose the python version modules in a package
+    use. Patch from Josselin, of course.
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 13 Aug 2003 11:48:22 -0400
+
 debhelper (4.1.63) unstable; urgency=low
 
   * dh_python: patch from Josselin to fix generated depends. Closes: #204717
