r1590:    * Converted several chown 0.0 to chown 0:0 for POSIX 200112.    * dh_python: patch from Josselin to support packages only      shipping binary (.so) modules, and removal of any already byte-compiled      .py[co] found.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (4.1.65) unstable; urgency=low
+
+  * Converted several chown 0.0 to chown 0:0 for POSIX 200112.
+  * dh_python: patch from Josselin to support packages only
+    shipping binary (.so) modules, and removal of any already byte-compiled
+    .py[co] found.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 17 Aug 2003 21:11:35 -0400
+
 debhelper (4.1.64) unstable; urgency=low
 
   * dh_python: Add a -V flag to choose the python version modules in a package
