r1594:    * dh_python: Another patch, for pythonX.Y-foo packages.    * dh_link: Improve error message if link destination is a directory.      Closes: #206689

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.67) unstable; urgency=low
+
+  * dh_python: Another patch, for pythonX.Y-foo packages.
+  * dh_link: Improve error message if link destination is a directory.
+    Closes: #206689
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 22 Aug 2003 12:48:19 -0400
+
 debhelper (4.1.66) unstable; urgency=low
 
   * dh_link: rm -f every time, ln -f is not good enough if the link target
