--- a/doc/TODO
+++ b/doc/TODO
@@ -34,6 +34,10 @@ Wishlist items:
   --section is not given. So I should be able to stop parsing it myself for
   section, after dpkg 1.10 has been around long enough.
 
+* Support comments in config files? (#206422)
+* dh_installppp
+* dh_installnetwork
+
 Deprecated:
 
 * DH_COMPAT 1. Can be removed once all packages are seen to be using 2 or
