r1596:    * Remove duplicate packages from DOPACKAGES after argument processing.      Closes: #112950    * dh_compress: deal with links pointing to links pointing to compressed      files, no matter what order find returns them. Closes: #204169    * dh_installmodules, dh_installpam, dh_installcron, dh_installinit,      dh_installogrotate: add --name= option, that can be used to specify      the name to use for the file(s) installed by these commands. For example,      dh_installcron --name=foo will install debian/package.foo.cron.daily to      etc/cron.daily/foo. Closes: #138202, #101003, #68545, #148844      (Thanks to Thomas Hood for connecting these bug reports.)    * dh_installinit: deprecated --init-script option in favor of the above.    * Add dh_installppp. Closes: #43403

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -361,13 +361,11 @@ Set to 1 to enable no-act mode.
 
 =item DH_OPTIONS
 
-Anything in this variable will be prepended to the command line
-arguments of all debhelper commands. This is useful in some situations,
-for example, if you need to pass -p to all debhelper commands that will be
-run. If you use DH_OPTIONS, be sure to build depend on "debhelper >= 1.1.17" --
-older debhelpers will ignore it and do things you don't want them to. One very
-good way to set DH_OPTIONS is by using "Target-specific Variable Values" in
-your debian/rules file. See the make documentation for details on doing this.
+Anything in this variable will be prepended to the command line arguments
+of all debhelper commands. This is useful in some situations, for example,
+if you need to pass -p to all debhelper commands that will be run. One good
+way to set DH_OPTIONS is by using "Target-specific Variable Values" in your
+debian/rules file. See the make documentation for details on doing this.
 
 =item DH_ALWAYS_EXCLUDE
 
