--- a/doc/TODO
+++ b/doc/TODO
@@ -34,10 +34,6 @@ Wishlist items:
   --section is not given. So I should be able to stop parsing it myself for
   section, after dpkg 1.10 has been around long enough.
 
-* Support comments in config files? (#206422)
-* dh_installppp
-* dh_installnetwork
-
 Deprecated:
 
 * DH_COMPAT 1. Can be removed once all packages are seen to be using 2 or
@@ -54,3 +50,4 @@ Deprecated:
 * debconf-mergetemplates support and the debian/template.ll files and the
   debconf-utils dependency.
 * dh_undocumented
+* dh_installinit --init-script
