r1598:    * dh_installppp: correct filenames on man page. Closes: #206893    * dh_installinit: man page typo fix and enhancement. Closes: #206891

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.69) unstable; urgency=low
+
+  * dh_installppp: correct filenames on man page. Closes: #206893
+  * dh_installinit: man page typo fix and enhancement. Closes: #206891
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 23 Aug 2003 14:54:59 -0400
+
 debhelper (4.1.68) unstable; urgency=low
 
   * Remove duplicate packages from DOPACKAGES after argument processing.
