r1600: spanish tranalstion of man pages

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.70) unstable; urgency=low
+
+  * Complete Spanish translation of all man pages thanks to Rubén Porras
+    Campo, Rudy Godoy, and the rest of the Spanish translation team.
+    Closes: #199261
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 25 Aug 2003 19:45:45 -0400
+
 debhelper (4.1.69) unstable; urgency=low
 
   * dh_installppp: correct filenames on man page. Closes: #206893
