--- a/doc/TODO
+++ b/doc/TODO
@@ -34,6 +34,15 @@ Wishlist items:
   --section is not given. So I should be able to stop parsing it myself for
   section, after dpkg 1.10 has been around long enough.
 
+v5:
+
+* comments in config files 
+* escaping in config files (for whitespace)?
+* make dh_installman set up slave links, always assuming wm and man page
+  are in same area (/usr/bin and /usr/share/man, or /usr/X11/). Or, if the
+  .1x extension stuff is a problem, only look for man pages in
+  /usr/share/man. #85963
+
 Deprecated:
 
 * DH_COMPAT 1. Can be removed once all packages are seen to be using 2 or
