--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.71) unstable; urgency=low
+
+UNRE
+  * Typo. Closes: #207999
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 31 Aug 2003 19:47:17 -0400
+
 debhelper (4.1.70) unstable; urgency=low
 
   * Complete Spanish translation of all man pages thanks to Rubén Porras
