r1603:    * Typo. Closes: #207999    * Typo, typo. Closes: #208171 :-)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
 debhelper (4.1.71) unstable; urgency=low
 
-UNRE
   * Typo. Closes: #207999
+  * Typo, typo. Closes: #208171 :-)
 
- -- Joey Hess <joeyh@debian.org>  Sun, 31 Aug 2003 19:47:17 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon,  1 Sep 2003 08:24:13 -0400
 
 debhelper (4.1.70) unstable; urgency=low
 
