r1605:    * Switch from build-depends-indep to just build-depends.    * dh_installman: match .so links with whitespace after the filename      Closes: #208753

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.72) unstable; urgency=low
+
+  * Switch from build-depends-indep to just build-depends.
+  * dh_installman: match .so links with whitespace after the filename
+    Closes: #208753
+
+ -- Joey Hess <joeyh@debian.org>  Fri,  5 Sep 2003 13:59:12 -0400
+
 debhelper (4.1.71) unstable; urgency=low
 
   * Typo. Closes: #207999
