r1607:    * dh_installcatalogs: in prerm on upgrade, call update-catalog on the      advice of Adam DiCarlo. Closes: #209131

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.73) unstable; urgency=low
+
+  * dh_installcatalogs: in prerm on upgrade, call update-catalog on the
+    advice of Adam DiCarlo. Closes: #209131
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  7 Sep 2003 21:43:31 -0400
+
 debhelper (4.1.72) unstable; urgency=low
 
   * Switch from build-depends-indep to just build-depends.
