--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.74) unstable; urgency=low
+
+  * Only list dh_installman once in example rules.indep. Closes: #211567
+  * Really fix the prerm-sgmlcatalog, not the postrm. Closes: #209131
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Sep 2003 18:56:54 -0400
+
 debhelper (4.1.73) unstable; urgency=low
 
   * dh_installcatalogs: in prerm on upgrade, call update-catalog on the
