r1611:    * dh_install: add --fail-missing option. Closes: #120026    * Fix mispelling in prerm-sgmlcatalog. Closes: #215189

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.75) unstable; urgency=low
+
+  * dh_install: add --fail-missing option. Closes: #120026
+  * Fix mispelling in prerm-sgmlcatalog. Closes: #215189
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 10 Oct 2003 22:12:59 -0400
+
 debhelper (4.1.74) unstable; urgency=low
 
   * Only list dh_installman once in example rules.indep. Closes: #211567
