--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.77) unstable; urgency=low
+
+  * Remove the "L" from reference to menufile(5). Closes: #216042
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 16 Oct 2003 13:33:12 -0400
+
 debhelper (4.1.76) unstable; urgency=low
 
   * Patch from Andrew Suffield <asuffield@debian.org> to make dh_strip
