--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.78) unstable; urgency=low
+
+  * dh_installcatalogs: Fixed to create dir in tmpdir. Closes: #218237 
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 29 Oct 2003 18:08:56 -0500
+
 debhelper (4.1.77) unstable; urgency=low
 
   * Remove the "L" from reference to menufile(5). Closes: #216042
