--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,18 @@
+debhelper (4.1.79) unstable; urgency=low
+
+  * dh_strip: typo. Closes: #218745
+  * Updated Spanish man page translations for:
+    debhelper dh_installcron dh_installinit dh_installlogrotate dh_installman
+    dh_installmodules dh_installpam dh_install dh_movefiles dh_strip
+    Closes: #218718
+
+ -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 15:26:07 -0500
+
 debhelper (4.1.78) unstable; urgency=low
 
-  * dh_installcatalogs: Fixed to create dir in tmpdir. Closes: #218237 
+  * dh_installcatalogs: Fixed to create dir in tmpdir. Closes: #218237
 
- -- Joey Hess <joeyh@debian.org>  Wed, 29 Oct 2003 18:08:56 -0500
+ -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 15:26:02 -0500
 
 debhelper (4.1.77) unstable; urgency=low
 
