--- a/man/es/dh_movefiles.pod
+++ b/man/es/dh_movefiles.pod
@@ -39,7 +39,7 @@ Nota: dh_install es un programa mejor que puede hacer todo lo que éste, y más.
 En lugar de mover ficheros de debian/tmp (el predeterminado), esta opción
 los mueve de otro directorio. Puesto que el contenido del directorio origen
 es movido, especificar algo como --sourcedir=/ es muy inseguro, así que
-para prevenir errores, el sourcedir debe ser un fichero relativo; y no puede
+para impedir errores, el sourcedir debe ser un fichero relativo; y no puede
 empezar con un `/'.
 
 =item B<-Xelemento>, B<--exclude=elemento>
