--- a/man/es/dh_installlogrotate.pod
+++ b/man/es/dh_installlogrotate.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installlogrotate.pod
 
 =head1 NOMBRE
@@ -10,7 +10,7 @@ dh_installlogrotate - instala ficheros de configuración de logrotate
 
 =head1 SINOPSIS
 
-B<dh_installlogrotate> [S<I<opciones debhelper>>]
+B<dh_installlogrotate> [S<I<opciones debhelper>>] [B<--name=>I<nombre>]
 
 =head1 DESCRIPCIÓN
 
@@ -18,6 +18,18 @@ dh_installlogrotate es un programa de debhelper responsable de instalar ficheros
 de configuración de logrotate en etc/logrotate.d en los directorios de
 construcción del paquete. Se instalan los ficheros llamados
 debian/paquete.logrotate.
+
+=head1 OPCIONES
+
+=over 4
+
+=item B<--name=>I<nombre>
+
+Busca ficheros con el nombre debian/paquete.nombre.logrotate.* y los instala como
+etc/logrotate.*/nombre, en vez de usar los ficheros usuales e instalarlos con el
+nombre del paquete.
+
+=back
 
 =head1 VÉASE TAMBIÉN
 
