--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (4.1.80) unstable; urgency=low
+
+  * Add the Spanish manpages I missed last time. Closes: #218718
+  * dh_installman: support compressed man pages when finding .so links.
+    Closes: #218136
+
+ -- Joey Hess <joeyh@debian.org>  Thu,  6 Nov 2003 16:15:23 -0500
+
 debhelper (4.1.79) unstable; urgency=low
 
   * dh_strip: typo. Closes: #218745
