r1626:    * Add the Spanish manpages I missed last time. Closes: #218718    * dh_installman: support compressed man pages when finding .so links.      Closes: #218136

--- a/man/es/dh_installmenu.pod
+++ b/man/es/dh_installmenu.pod
@@ -1,12 +1,15 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installmenu.pod
 
 =head1 NOMBRE
 
 dh_installmenu - instala fichero del menú de Debian en los directorios de construcción
+
+
+=cut
 
 =head1 SINOPSIS
 
@@ -24,7 +27,7 @@ explicación acerca de como funciona esto.
 
 Si existe el fichero llamado debian/paquete.menu, se instala en
 usr/lib/menu/paquete en el directorio de construcción. Este es un fichero de
-menú de Debian. Lea L<menufile(5L)> para detalles acerca del formato.
+menú de Debian. Lea L<menufile(5)> para detalles acerca del formato.
 
 Si existe un fichero llamado debian/paquete.menu-method, se instala en
 etc/menu-methods/paquete en el directorio de construcción del paquete. Este es
@@ -39,6 +42,9 @@ un fichero de método de menú de Debian.
 No modifica los scripts postinst/postrm.
 
 =back
+
+
+=cut
 
 =head1 VÉASE TAMBIÉN
 
@@ -56,3 +62,6 @@ Joey Hess <joeyh@debian.org>
 =head1 TRADUCTOR
 
 Traducción de Rubén Porras Campo <debian-l10n-spanish@lists.debian.org>
+
+
+=cut
