--- a/man/es/dh_installpam.pod
+++ b/man/es/dh_installpam.pod
@@ -1,7 +1,7 @@
 # (c) 2003 Software in the Public Interest
 # Esta traducción ha sido realizada por Rubén Porras Campo <nahoo@inicia.es>
 # Está basada en la página de manual original:
-# versión 1.1 del CVS de
+# versión 1.2 del CVS de
 # /cvs/debian-doc/manpages/english/debhelper/dh_installpam.pod
 
 =head1 NOMBRE
@@ -10,7 +10,7 @@ dh_installpam - instala ficheros de soporte para pam
 
 =head1 SINOPSIS
 
-B<dh_installpam> [S<I<opciones debhelper>>] [B<-n>]
+B<dh_installpam> [S<I<opciones debhelper>>] [B<-n>] [B<--name=>I<nombre>]
 
 =head1 DESCRIPCIÓN
 
@@ -19,6 +19,18 @@ usados por PAM en los directorios de construcción del paquete.
 
 Si existe un fichero llamado debian/package.pam, se instala en
 etc/pam.d/paquete en el directorio de construcción del paquete.
+
+=head1 OPCIONES
+
+=over 4
+
+=item B<--name=>I<nombre>
+
+Busca ficheros con el nombre debian/paquete.nombre.pam y los instala como
+etc/pam.d/nombre, en vez de usar los ficheros usuales e instalarlos con el
+nombre del paquete.
+
+=back
 
 =head1 VÉASE TAMBIÉN
 
