--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+debhelper (4.1.83) unstable; urgency=low
+
+  * Clarify dh_install's autodest behavior with wildcards. Closes: #224707
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 21 Dec 2003 12:18:37 -0500
+
+debhelper (4.1.82) unstable; urgency=low
+
+  * Add remove guard to prerm-info. Closes: #223617
+  * Remove #INITPARMS# from call to update-rc.d in postrm-init. Closes: #224090
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 16 Dec 2003 16:33:19 -0500
+
 debhelper (4.1.81) unstable; urgency=low
 
   * Removed the no upstream changelog for debian packages test.
