--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (4.1.84) unstable; urgency=low
+
+  * Added dh_gconf command from Ross Burton. Closes: #180882
+  * dh_scrollkeeper: Make postinst fragment test for scrollkeeper-update.
+    Closes: #225337
+  * Copyright update.
+  * Include full text of the GPL in the source package, because goodness
+    knows, I need another copy of that in subversion..
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 11 Jan 2004 14:14:15 -0500
+
 debhelper (4.1.83) unstable; urgency=low
 
   * Clarify dh_install's autodest behavior with wildcards. Closes: #224707
