--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.85) unstable; urgency=low
+
+  * dh_install: add missing parens to the $installed regexp. Closes: #227963
+  * dh_install: improve wording of --list-missing messages
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 15 Jan 2004 22:45:42 -0500
+
 debhelper (4.1.84) unstable; urgency=low
 
   * Added dh_gconf command from Ross Burton. Closes: #180882
