--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.86) unstable; urgency=low
+
+  * dh_gconf: Fix man page typos, thanks Ruben Porras. Closes: #228076
+  * dh_gconf: Spanish man page from Ruben Porras. Closes: #228075
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 16 Jan 2004 12:43:58 -0500
+
 debhelper (4.1.85) unstable; urgency=low
 
   * dh_install: add missing parens to the $installed regexp. Closes: #227963
