--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.87) unstable; urgency=low
+
+  * dh_gconf: Add proper parens around the package version in the misc:Depends
+    setting.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 16 Jan 2004 12:53:43 -0500
+
 debhelper (4.1.86) unstable; urgency=low
 
   * dh_gconf: Fix man page typos, thanks Ruben Porras. Closes: #228076
