--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (4.1.88) unstable; urgency=low
+
+  * dh_strip: Fix a unquoted string in regexp in the dbg symbols code.
+    Closes: #228272
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 17 Jan 2004 20:13:32 -0500
+
 debhelper (4.1.87) unstable; urgency=low
 
   * dh_gconf: Add proper parens around the package version in the misc:Depends
