--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (4.1.89) unstable; urgency=low
+
+  * dh_scrollkeeper: Make postinst /dev/null stdout of which test.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 23 Jan 2004 16:00:21 -0500
+
 debhelper (4.1.88) unstable; urgency=low
 
   * dh_strip: Fix a unquoted string in regexp in the dbg symbols code.
