--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (4.1.90) unstable; urgency=low
+
+  * dh_strip: Add note to man page that the detached debugging symbols options
+    mean the package must build-depend on a new enough version of binutils.
+    Closes: #231382
+  * dh_installdebconf: The debconf dependency has changed to include 
+    "| debconf-2.0". Closes: #230622
+
+ -- Joey Hess <joeyh@debian.org>  Sat,  7 Feb 2004 15:10:10 -0500
+
 debhelper (4.1.89) unstable; urgency=low
 
   * dh_scrollkeeper: Make postinst /dev/null stdout of which test.
